# Arthas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  arthas.config  artifactREADME.md  codestyle.md  duplicateScript  memcachedScript  redisScript  varScript
analyzer/: CMakeLists.txt  README.md
analyzer/future/: CMakeLists.txt
analyzer/future/include/future/llvm/ADT/: DirectedGraph.h  Extras.h
analyzer/future/include/future/llvm/IR/: Extras.h
analyzer/future/lib/: CMakeLists.txt
analyzer/future/lib/llvm/ADT/: DirectedGraph.cpp
analyzer/future/lib/llvm/Analysis/: DependenceAnalysis.cpp
analyzer/include/: LLVM.h  sample.h
analyzer/include/DefUse/: DefUse.h
analyzer/include/Instrument/: InstrumentPmemAddr.h  InstrumentPmemAddrPass.h  PmemAddrInstrumenter.h  PmemAddrTrace.h  PmemVarGuidMap.h
analyzer/include/Matcher/: Matcher.h
analyzer/include/PMem/: Extractor.h  PMemVariablePass.h
analyzer/include/Slicing/: DgWalk.h  Slice.h  SliceCriteria.h  SliceGraph.h  Slicer.h
analyzer/include/Utils/: LLVM.h  Path.h  String.h
analyzer/lib/: CMakeLists.txt
analyzer/lib/DefUse/: DefUse.cpp  DefUse.h
analyzer/lib/Instrument/: InstrumentPmemAddr.cpp  InstrumentPmemAddrPass.cpp  PmemAddrInstrumenter.cpp  PmemAddrTrace.cpp  PmemVarGuidMap.cpp
analyzer/lib/Matcher/: Matcher.cpp  Scope.cpp
analyzer/lib/PMem/: Extractor.cpp  Extractor.h  PMemVariablePass.cpp
analyzer/lib/Slicing/: DgWalk.cpp  Slice.cpp  SliceCriteria.cpp  SliceGraph.cpp  Slicer.cpp  Slicer.h  SlicingPass.cpp
analyzer/lib/Utils/: LLVM.cpp  Path.cpp  String.cpp  garbage.cpp  sample.cpp
analyzer/runtime/: CMakeLists.txt  addr_tracker.c  addr_tracker.h  checkpoint_hashmap.c  checkpoint_hashmap.h
analyzer/tools/: CMakeLists.txt
analyzer/tools/analyzer/: main.cpp
analyzer/tools/extractor/: main.cpp
analyzer/tools/instrumentor/: main.cpp
analyzer/tools/locator/: main.cpp
analyzer/tools/sample/: main.cpp
analyzer/tools/slicer/: main.cpp
detector/: CMakeLists.txt  Detector.cpp  Makefile  README.md  file  refreshScript
detector/int_overflow/: gdb.txt  gdb2.txt
detector/listpack_stack_traace/: gdb.txt  gdb2.txt
detector/refcount_memcached/: gdb.txt  gdb2.txt
detector/refcount_redis/: gdb.txt  gdb2.txt
detector/rehashing/: gdb.txt  gdb2.txt
reactor/: CMakeLists.txt  Makefile  README.md  c_reversion.c  c_reversion.h  checkpoint_generic.h  instrumentation_out  makescript  out  pmem_variables_run_script  reversion.cpp
reactor/checkpoint/: README.md
reactor/cmake/: FindGrpcAndGenSrc.cmake
reactor/idl/: CMakeLists.txt  reactor.proto
reactor/include/: checkpoint.h  checkpoint_hashmap.h  core.h  reactor-opts.h  rollback.h
reactor/lib/: CMakeLists.txt  checkpoint.c  core.cpp  reactor-opts.cpp  rollback.c  tomovetocompiler.txt
reactor/test/: hello_libpmem-hook-guids.map  hello_libpmemobj-hook-guids.map
reactor/tools/: CMakeLists.txt  client.cpp  main.cpp  reactor-opts.cpp  reactor-opts.h  reactor.cpp  server.cpp
scripts/: artifact_test.sh  clang-format-changed.py  experiment_memcached_refcount.sh  instrument-compile.sh  killScript  memcached-hook-guids.map  memcached-refcount  memcached_inserts.py  memcached_kill.sh  memcached_refcount_bug_trigger.pl  memcached_refcount_bug_trigger.sh  memcached_refcount_reexec.sh  memcached_refcount_twoclients.sh  memcached_start.sh  memcached_stats.py  print-duplicates.sh
test/: Makefile  README.md  field-sensitive.c  linked.c  simple.c
test/basic/: .gitignore  Makefile  crash.c  loop1.c  simple.c
test/dg/: .gitignore  control1.c  fptrinstruc.c  funcptr1.c  interproc1.c
test/memcached/: Makefile  items.c
test/memkind/: .gitignore  Makefile  memkind_malloc  memkind_malloc.c
test/pmem/: .gitignore  Makefile  README.md  hello_libpmem.c  hello_libpmemobj.c  low_level  low_level.c  out  pmem_two.c  pmem_variables  pmem_variables.c  pmem_vector.c
test/pmem/mapreduce/: .gitignore  Makefile
test/pmem/pmem_leak/: .gitignore  Makefile
test/pmem/simple_grep/: .gitignore
test/pmem/simple_grep/grep/: Makefile
test/pmem/simple_grep/pmemgrep/: .gitignore  Makefile
test/pmem/simple_grep/pmemgrep_thx/: Makefile
